syntax = "proto3";
package risdb.proto;

message PutRequest {
  // request id
  string request_id = 1;
  // Values to put
  repeated Value values = 2;
}

message PutResponse {
  // request id
  string request_id = 1;
  oneof response {
    PutSuccess success = 2;
    PutFailure failure = 3;
  }
}

message PutSuccess {
}

message PutFailure {
  // Reason for failure
  string reason = 1;
}

message GetRequest {
  // request id
  string request_id = 1;
  // Values to put
  repeated string keys = 2;
}

message GetResponse {
  // request id
  string request_id = 1;
  oneof response {
    GetSuccess success = 2;
    GetFailure failure = 3;
  }
}

message GetSuccess {
  // Values being returned
  repeated Value values = 3;
}

message GetFailure {
  // Reason for failure
  string reason = 1;
}

message Value {
  // Key to write to
  string key = 1;
  // Value to associate with the above key
  string value = 2;
}